--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Candy Crush</title>
-        <link rel="stylesheet" href="candy.css">
-        <script src="candy.js"></script>
+        <title>Haters Crush  </title>
+        <link rel="stylesheet" href="game.css">
+        <link rel="icon" href="./images/Choco.png">
+        <script src="gameLogic.js"></script>
     </head>
 
     <body>
