--- a/index.html
+++ b/index.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Haters Crush  </title>
-        <link rel="stylesheet" href="game.css">
-        <link rel="icon" href="./images/Choco.png">
-        <script src="gameLogic.js"></script>
-    </head>
 
-    <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Haters Crush </title>
+    <link rel="stylesheet" href="game.css">
+    <link rel="icon" href="./images/Choco.png">
+    <script src="gameLogic.js"></script>
+</head>
+
+<body>
+    <div>
         <h1>Score: <span id="score">0</span></h1>
-        <div id="board"></div>
-    </body>
+        <h1>Valid turns: <span id="turns">0</span></h1>
+        <h1>Remaning turns: <span id="remaningTurns">20</span></h1>
+    </div>
+    <div id="board"></div>
+    <div>
+        <button onClick="window.location.reload();">restart</button>
+    </div>
+
+</body>
+
 </html>
