--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     <div>
         <h1>Score: <span id="score">0</span></h1>
         <h1>Valid turns: <span id="turns">0</span></h1>
-        <!-- <h1>Remaning turns: <span id="remaningTurns">20</span></h1> -->
+        <h1>Remaning turns: <span id="remaningTurns">20</span></h1>
     </div>
+    <div id="countdown"></div>
+    <!-- <progress value="0" max="10" id="timer"></progress> -->
     <div id="board"></div>
     <div>
         <button onClick="window.location.reload();">restart</button>
