--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
     <div id="countdown"></div>
     <!-- <progress value="0" max="10" id="timer"></progress> -->
     <div id="board"></div>
+    <div> </div>
+    <div> </div>
     <div>
-        <button onClick="window.location.reload();">restart</button>
-        <button id="startGame" onClick="playSoundEffect('gameOver')">play</button>
+        <button class="buttons" onClick="window.location.reload();">restart</button>
+        <button class="buttons" id="startGame" onClick="playSoundEffect('gameOver')">play</button>
     </div>
 
 </body>
